--- a/app/src/main/res/layout/activity_lista_proprietario.xml
+++ b/app/src/main/res/layout/activity_lista_proprietario.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.edu.iff.pooa20162.cadveiculos.ListaProprietarioActivity">
+    tools:context="br.edu.iff.pooa20162.cadveiculos.activity.ListaProprietarioActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
