--- a/app/src/main/res/layout/content_lista_proprietario.xml
+++ b/app/src/main/res/layout/content_lista_proprietario.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.edu.iff.pooa20162.cadveiculos.ListaProprietarioActivity"
+    tools:context="br.edu.iff.pooa20162.cadveiculos.activity.ListaProprietarioActivity"
     tools:showIn="@layout/activity_lista_proprietario">
 
     <TextView
