--- a/app/src/main/res/menu/menu_lista_proprietario.xml
+++ b/app/src/main/res/menu/menu_lista_proprietario.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="br.edu.iff.pooa20162.cadveiculos.ListaProprietarioActivity">
+    tools:context="br.edu.iff.pooa20162.cadveiculos.activity.ListaProprietarioActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
